welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:17: error: type mismatch;
 found   : Unit
 required: Boolean
}else if	(Math.abs(n)<=210 && Math.abs(n)>=200) {
                                                       ^